SFDC-481:Unable to select operator for multi-select fields in Sequence Managed Package

--- a/src/classes/CadenceConstants.cls
+++ b/src/classes/CadenceConstants.cls
@@ -66,4 +66,7 @@ public with sharing class CadenceConstants {
 
 	//Other Operations name in batch
 	public static final String SETCONTACTOPPNULL = 'SetContactOppNull';
+	
+	//Multi Pick List
+    public static final string MultiPickList = 'MultiPickList';
 }
