Some fixes after code merge

--- a/src/classes/GetNamespace.cls
+++ b/src/classes/GetNamespace.cls
@@ -5,7 +5,9 @@ public class GetNamespace {
 	public GetNamespace(ApexPages.StandardController stdController) {
 		namespace = orgNamespace == null ? 'c' : orgNamespace;
 	} 
-
+    public GetNamespace(ApexPages.StandardSetController stdController) {
+        namespace = orgNamespace == null ? 'c' : orgNamespace;
+    }
 	public GetNamespace() {
 		namespace = orgNamespace == null ? 'c' : orgNamespace;
 	}
